--- a/src/styless/main-content.css
+++ b/src/styless/main-content.css
@@ -27,7 +27,7 @@
     margin-right: 1.25rem;
 }
 
-.arrow-left .arrow-right {
+.arrow-left, .arrow-right {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -63,5 +63,34 @@
 }
 
 .header__search input{
+    background: transparent;
+    border: none;
+    padding: 0px 100px 0 12px;
+    color: #fff;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    outline: none;
+}
+
+.header__login .subscribe{
+    color: #a7a7a7;
+    font-size: 16px;
+    font-weight: 700;
+    background-color: transparent;
+    margin-right: 32px;
+    border: none;
+    cursor: pointer;
     
 }
+
+
+.header__login .login{
+    width: 100px;
+    height: 48px;
+    color: #000;
+    font-size: 16px;
+    font-weight: 700;
+    border-radius: 40px;
+    cursor: pointer;
+} 
